--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/hanzheng.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hanzheng_club</title>
+    <title>HanZheng Club</title>
   </head>
   <body>
     <div id="root"></div>
